fix: logo icon intro height alignment

--- a/src/App.css
+++ b/src/App.css
@@ -185,6 +185,7 @@
 .intro img {
   width: 30px;
   height: 30px;
+  padding-bottom: 10px;
 }
 
 .intro-title {
